Fix conversation height on mobile

--- a/src/stylesheets/variables.less
+++ b/src/stylesheets/variables.less
@@ -12,8 +12,9 @@
 @widget-close-bottom: -@widget-height + @header-height + 2 *@header-padding;
 
 @conversation-padding: 18px;
-@conversation-height: calc(@widget-height - (@header-height + 2 * @header-padding) - @footer-height - @conversation-padding);
-@conversation-height-mobile: ~"calc(100%  - @{conversation-padding})";
+@remaining-height: (@header-height + 2 * @header-padding) + @footer-height + @conversation-padding;
+@conversation-height: calc(@widget-height - @remaining-height);
+@conversation-height-mobile: ~"calc(100%  - @{remaining-height})";
 
 @logo-margin: ~"calc(50% - 100px)";
 
